# GameForProgrammersCore

./: .gitignore  Cargo.toml  LICENSE  README.md
jsons/: command.json  commands.json  game_state.json  hero.json  sign.json
proto/: commands.proto
src/: doc.md  hero.rs  main.rs  uniq.rs
src/client/: client.rs
src/core/: api.rs  config.rs  doc.md  game.rs  geometry.rs  gun.rs  hero.rs  main.rs  map.rs  mod.rs  player.rs  statistic.rs  uniq.rs
src/server/: server.rs
